feat: initialize frontend with React and Vite
- Added React and Vite configuration files.
- Created main entry point for the application.
- Introduced global CSS styles for light and dark themes.
- Included SVG assets for React and Vite logos.
- Set up TypeScript configuration for app and node environments.